--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Shian Huang",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "chartjs": "^0.3.7",
     "cron": "^1.1.0",
     "express": "^4.13.4",
-    "fs": "0.0.2",
+    "jasmine-core": "^2.4.1",
     "jquery": "^2.2.1",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.7",
+    "karma-jasmine-jquery": "^0.1.1",
     "node-cron": "^1.1.1",
     "shelljs": "^0.6.0"
   }
